# transcode

./: .beman-tidy.yaml  .clang-tidy  .clang-tidy-lint  .copier-answers.yml  .exemplar_version  .gitattributes  .gitignore  .pre-commit-config.yaml  Benchmarking_01Transcode_01Implementation_01Performance_8md.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  C_09_0929_01Transcoding_01Architecture_8md.html  Makefile  PLATFORM__NOTES_8md.html  README.md  README_8md.html  RUNNING_8md.html  Rust_01Encoding_01for_01C_09_09_01Transcode_8md.html  SOURCE_8md.html  a.out  annotated.html  annotated_dup.js  benchmarks_2SOURCE_8md.html  big5_8hpp.html  big5_8hpp_source.html  bulk__transcode_8hpp.html  bulk__transcode_8hpp.js  bulk__transcode_8hpp_source.html  classbeman_1_1transcoding_1_1decode__or__error__view-members.html  classbeman_1_1transcoding_1_1decode__or__error__view.html  classbeman_1_1transcoding_1_1decode__or__error__view.js  classbeman_1_1transcoding_1_1decode__or__error__view_1_1iterator-members.html  classbeman_1_1transcoding_1_1decode__or__error__view_1_1iterator.html  classbeman_1_1transcoding_1_1decode__or__error__view_1_1iterator.js  classbeman_1_1transcoding_1_1decode__view-members.html  classbeman_1_1transcoding_1_1decode__view.html  classbeman_1_1transcoding_1_1decode__view.js  classbeman_1_1transcoding_1_1decode__view_1_1iterator-members.html  (+516 more)
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci_tests.yml  codeql.yml  doxygen-gh-pages.yml  ossf-scorecard-analysis.yml  pre-commit-check.yml  pre-commit-update.yml  test_makefile.yaml  uv-lock-release.yml  vcpkg-release.yml
benchmark/: CMakeLists.txt  benchmark_fixture.cpp  benchmark_fixture.hpp  benchmark_sink.hpp  boundary_stress_benchmarks.bench.cpp  codecvt_benchmarks.bench.cpp  encoding_rs_benchmarks.bench.cpp  iconv_benchmarks.bench.cpp  pluggable_codec_benchmarks.bench.cpp  simdutf_benchmarks.bench.cpp  smoke.bench.cpp  utf_benchmarks.bench.cpp  whatwg_benchmarks.bench.cpp
benchmark/corpus/: ar_mars_utf8.txt  en_mars_utf8.txt  ja_mars_utf8.txt  ko_mars_utf8.txt  ru_mars_utf8.txt  war_and_peace_utf8.txt  zh_mars_utf8.txt
benchmark/encoding_rs_bench/: Cargo.toml
benchmark/encoding_rs_bench/include/encoding_rs_bench/: encoding_rs_bench.h
benchmark/encoding_rs_bench/src/: lib.rs
cmake/: gcovr.cfg.in
data/tables/: ibm866.hpp  iso_8859_10.hpp  iso_8859_13.hpp  iso_8859_14.hpp  iso_8859_15.hpp  iso_8859_16.hpp  iso_8859_2.hpp  iso_8859_3.hpp  iso_8859_4.hpp  iso_8859_5.hpp  iso_8859_6.hpp  iso_8859_7.hpp  iso_8859_8.hpp  koi8_r.hpp  koi8_u.hpp  macintosh.hpp  windows_1250.hpp  windows_1251.hpp  windows_1252.hpp  windows_1253.hpp  windows_1254.hpp  windows_1255.hpp  windows_1256.hpp  windows_1257.hpp  windows_1258.hpp  windows_874.hpp  x_mac_cyrillic.hpp
docs/: Benchmarking Transcode Implementation Performance.md  C++29 Transcoding Architecture.md  Doxyfile  Rust Encoding for C++ Transcode.md  iconv-testing.md  p2728-alignment.md  prior-art.bib  transcode as a C++29 Library Candidate.md  transcoding-plan-part2.md  why-forward-iterator.md  why-forward-iterator.org
docs/benchmarks/: PLATFORM_NOTES.md  README.md  RUNNING.md  SOURCE.md
docs/plans/: handoff-next.md  p3-step1-benchmark-harness.md  p3-step10-boundary-stress.md  p3-step11-toolchain-matrix.md  p3-step12-reporting-and-repro.md  p3-step2-benchmark-data.md  p3-step3-benchmark-fixtures.md  p3-step4-utf-benchmarks.md  p3-step5-legacy-whatwg-benchmarks.md  p3-step6-iconv-baselines.md  p3-step7-codecvt-baseline.md  p3-step8-encoding-rs-baseline.md  p3-step9-simdutf-baseline.md  p4-step1-pluggable-encode.md  p4-step2-pluggable-bulk.md  p4-step3-pluggable-transcode.md  phase2-checklist.md  (+14 more)
etc/: gcc-flags.cmake  perf-toolchain.cmake  toolchain.cmake
examples/: CMakeLists.txt  custom_single_byte_decoder.cpp  paper_decode_utf8.cpp  paper_error_visibility.cpp  paper_from_cstring.cpp  paper_iconv_view.cpp  paper_shift_jis_to_utf8.cpp  todo.cpp
infra/: .beman_submodule
installtest/: CMakeLists.txt  test.cpp  test_module.cpp
papers/: Makefile  transcode-view.md
port/: portfile.cmake.in  vcpkg.json.in
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  concepts_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+64 more)
tests/beman/transcode/: CMakeLists.txt  benchmark_fixture.test.cpp  big5_decode.test.cpp  big5_encode.test.cpp  blp59001.test.cpp  bulk_transcode.test.cpp  codec_concepts.test.cpp  concepts.test.cpp  concepts_reject_arrays_fail.cpp  concepts_reject_unicode_chars_fail.cpp  decode_view.test.cpp  decode_view_reject_arrays_fail.cpp  ebcdic037.test.cpp  encode_view.test.cpp  encode_view_reject.cpp  error.test.cpp  euc_jp_decode.test.cpp  euc_jp_encode.test.cpp  euc_kr_decode.test.cpp  euc_kr_encode.test.cpp  gb18030_decode.test.cpp  gb18030_encode.test.cpp  gbk_decode.test.cpp  gbk_encode.test.cpp  iconv_bulk.test.cpp  iconv_mock.hpp  iconv_null_term.test.cpp  iconv_real.test.cpp  iconv_transcode.test.cpp  iconv_transcode_iterator_copy_fail.cpp  iconv_transcode_or_error.test.cpp  iconv_transcode_or_error_iterator_copy_fail.cpp  iso2022jp_decode.test.cpp  iso2022jp_encode.test.cpp  labels.test.cpp  module_integration.test.cpp  null_term.test.cpp  null_term_reject_range_fail.cpp  pluggable_bulk.test.cpp  pluggable_transcode.test.cpp  (+42 more)
tests/whatwg/codec/tests/: CMakeLists.txt  generate_indices.py  test_cases.hpp  vectors.hpp  verify.hpp  whatwg_indices.hpp  whatwg_wpt_testing_plan.md
tools/: download_benchmark_corpora.py  download_indexes.py  generate_labels.py  generate_tables.py  generate_wpt_vectors.py  process_benchmark_results.py  retry_xiyouji_chapters.py  run-gitleaks.sh
transcode/: handoff-next.md
(+94 files in other folders)
