[project]
name = "beman-transcode"
version = "0.1.0"
description = "Transcoding Views and Ranges"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
  "clang-format==22.1.5",
  "cmake==4.3.2",
  "gcovr>=8.6",
  "mbake==1.4.6",
  "ninja>=1.13",
  "pre-commit>=4.6.0",
  "shellcheck-py>=0.11.0.1"
]
