[project]
name = "beman-transcode"
version = "0.1.0"
description = "Transcoding Views and Ranges"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
  "clang-format==22.1.5",
  "cmake==4.3.2",
  "gcovr>=8.6",
  "mbake==1.4.6",
  "mypy>=1.15",
  "ninja>=1.13",
  "pre-commit>=4.6.0",
  "pytest>=8.0",
  "ruff>=0.15.14",
  "shellcheck-py>=0.11.0.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = ["papers/wg21"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
